WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103135
[Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context.
https://bugs.webkit.org/show_bug.cgi?id=103135
Summary
[Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context.
Zeno Albisser
Reported
2012-11-23 06:24:05 PST
[Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context.
Attachments
Patch
(1.69 KB, patch)
2012-11-23 06:25 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-11-23 06:25:56 PST
Created
attachment 175793
[details]
Patch
Zeno Albisser
Comment 2
2012-11-23 07:12:44 PST
Comment on
attachment 175793
[details]
Patch Clearing flags on attachment: 175793 Committed
r135607
: <
http://trac.webkit.org/changeset/135607
>
Zeno Albisser
Comment 3
2012-11-23 07:12:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug