[Qt] GraphicsContext3DQt should not overwrite glClearColor of sharing context. https://bugs.webkit.org/show_bug.cgi?id=103135

In case we use GraphicsContext3DQt to render into or
read from an existing context, we should not reset
the glClearColor on construction.
Otherwise we might overwrite an existing definition from
the sharing context.

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/qt/GraphicsContext3DQt.cpp:
(WebCore::GraphicsContext3D::GraphicsContext3D):

Canonical link: https://commits.webkit.org/121268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135607 268f45cc-cd09-0410-ab3c-d52691b4dbfc